[gd_scene load_steps=3 format=3 uid="uid://dtc3f6n9q2xrv"]

[ext_resource type="Script" path="res://scripts/ui/menus/AdvancedCraftingUI.gd" id="1_crafting"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.2, 0.1, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.84, 0, 1)

[node name="AdvancedCraftingUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_crafting")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="MainPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -400.0
offset_right = 600.0
offset_bottom = 400.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="HBoxContainer" type="HBoxContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="RecipesContainer" type="VBoxContainer" parent="MainPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RecipesLabel" type="Label" parent="MainPanel/HBoxContainer/RecipesContainer"]
layout_mode = 2
text = "RECEITAS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainPanel/HBoxContainer/RecipesContainer"]
layout_mode = 2

[node name="CategoryFilter" type="OptionButton" parent="MainPanel/HBoxContainer/RecipesContainer"]
layout_mode = 2

[node name="RecipesList" type="ItemList" parent="MainPanel/HBoxContainer/RecipesContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CraftingContainer" type="VBoxContainer" parent="MainPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CraftingLabel" type="Label" parent="MainPanel/HBoxContainer/CraftingContainer"]
layout_mode = 2
text = "CRIAÇÃO"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MainPanel/HBoxContainer/CraftingContainer"]
layout_mode = 2

[node name="ItemPreview" type="Panel" parent="MainPanel/HBoxContainer/CraftingContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 120)

[node name="MaterialsContainer" type="VBoxContainer" parent="MainPanel/HBoxContainer/CraftingContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MaterialsLabel" type="Label" parent="MainPanel/HBoxContainer/CraftingContainer/MaterialsContainer"]
layout_mode = 2
text = "Materiais Necessários:"

[node name="MaterialsList" type="RichTextLabel" parent="MainPanel/HBoxContainer/CraftingContainer/MaterialsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SuccessContainer" type="HBoxContainer" parent="MainPanel/HBoxContainer/CraftingContainer"]
layout_mode = 2

[node name="SuccessLabel" type="Label" parent="MainPanel/HBoxContainer/CraftingContainer/SuccessContainer"]
layout_mode = 2
text = "Chance de Sucesso:"

[node name="SuccessPercentage" type="Label" parent="MainPanel/HBoxContainer/CraftingContainer/SuccessContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "85%"
horizontal_alignment = 2

[node name="CraftButton" type="Button" parent="MainPanel/HBoxContainer/CraftingContainer"]
layout_mode = 2
text = "CRIAR ITEM"

[node name="InfoContainer" type="VBoxContainer" parent="MainPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InfoLabel" type="Label" parent="MainPanel/HBoxContainer/InfoContainer"]
layout_mode = 2
text = "INFORMAÇÕES"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="MainPanel/HBoxContainer/InfoContainer"]
layout_mode = 2

[node name="ItemInfo" type="RichTextLabel" parent="MainPanel/HBoxContainer/InfoContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Selecione uma receita para ver as informações..."

[node name="CloseButton" type="Button" parent="MainPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_bottom = 30.0
text = "X"